# p2abc_iot_toolkit

./: .gitignore  .gitmodules  README.md
Code/: CMakeLists.txt  README.md  Toolchain-omega2-mipsel.cmake  main.cpp  testSocket.py
Code/inherited/: multos.h
Code/inherited/multos/src/: crypto_issuing.c  crypto_proving.c  idemix.c
Code/inherited/multos/test/: crypto_compute_hash.c  crypto_compute_mhat.c  crypto_compute_vhat.c
Code/util_sc/: BIOSC.c  CMakeLists.txt  arithmetic_implementation_v1.c  arithmetic_util.c  big_integer_arithmetic.c  crypto_help.c  crypto_util.c  debug.cpp  global_vars.c  m_adapted_API.c  subroutines.c  system_funcs.c
Code/util_sc/include_util_sc/: APDU_types.h  arithmetic_implementation_v1.h  arithmetic_util.h  big_integer_arithmetic.h  crypto_help.h  crypto_util.h  debug.h  defs_consts.h  defs_types.h  global_vars.h  m_adapted_API.h  mota_smartcard.h  subroutines.h  system_funcs.h
Code/util_sc/p2abc_iot_toolkit_include/: debug.h
Code/util_sc/p2abc_iot_toolkit_include/smartcard_adaptee/: tiny-SHA256.h
Code/util_sc/p2abc_iot_toolkit_include/smartcard_adaptor/: crypto_util.h  serialize_util.h  system_funcs.h
Code/util_sc/p2abc_iot_toolkit_include/smartcard_common/: APDU_handler.h  APDU_types.h  IO_APDU_variables.h  abc4T_types.h  defs_consts.h  global_vars.h  m_adapted_API.h  serialize_static_data.h  subroutines.h
Code/util_sc/p2abc_iot_toolkit_include/smartcard_external_utilities/: cryptodev-AES128.h  cryptodev-SHA256.h  cryptodev.h
Code/util_sc/p2abc_iot_toolkit_include/smartcard_utils_interface/: crypto_util.h  error_codes.h  init_smartcard_util.h  mExit_util.h  output_APDU_response.h  sc_status_io_util.h  serialize_util.h
Code/util_sc/p2abc_iot_toolkit_src/: BIOSC.c  debug.cpp
Code/util_sc/p2abc_iot_toolkit_src/smartcard_adaptee/: arithmetic_implementation_v1.c  mini-gmp.c  tiny-AES128.c  tiny-SHA256.c
Code/util_sc/p2abc_iot_toolkit_src/smartcard_adaptor/: arithmetic_util.c  crypto_util.c  system_funcs.c
Code/util_sc/p2abc_iot_toolkit_src/smartcard_common/: APDU_handler.c  global_vars.c  m_adapted_API.c  subroutines.c
Code/util_sc/p2abc_iot_toolkit_src/smartcard_external_utilities/: cryptodev-AES128.c
Code/util_sc/p2abc_iot_toolkit_src/smartcard_utils_interface/: arithmetic_util.c  crypto_util.c  init_smartcard_util.c  mExit_util.c  output_APDU_response.c  sc_status_io_util.c  serialize_util.c
Code/util_sc_tests/: CMakeLists.txt
Code/util_sc_tests/apdu_tests/: handle_APDU_tests.cpp
Code/util_sc_tests/basic_tests/: CMakeLists.txt  arithmetic_util_tests.cpp  crypto_help_tests.cpp  crypto_util_tests.cpp  m_adapted_API_tests.cpp  modular_arith_tests.cpp  random_numbers_check.cpp  subroutines_tests.cpp
Doc/: README.md
Doc/benchmarks/: Benchmark  Benchmark.xlsx  net  ram  testNet.py
Doc/benchmarks/exitoOmega2/: status.json  terminalOmega.txt
Doc/benchmarks/originales/: laptop1  laptop2  laptop3  laptop4  laptop5  o21  o22  o23  o24  o25  rpi31  rpi32  rpi33  rpi34  rpi35
Doc/classicthesis/: .gitignore  Bibliography.bib  ClassicThesis.tex  classicthesis-config.tex
Doc/classicthesis/Chapters/: Chapter01.tex  Chapter02.tex  Chapter03.tex  Chapter0A.tex  Conclusions.tex  Design.tex  Draft.tex  Introduccion.tex  Introduction.tex  Objectives.tex  StateOfTheArt.tex  Validation.tex
Doc/classicthesis/FrontBackmatter/: Abstract.tex  Bibliography.tex  Contents.tex  Declaration.tex  Titleback.tex  Titlepage.tex
Doc/ieee/: bare_jrnl.tex
Doc/plantuml/: APDUsInteraction.puml  basicInteraction.puml  issuanceInteraction.puml  provingInteraction.puml  sequenceBIOSC.puml  sequenceP2ABCE.puml
communication/: README.md
contiki/: README.md
core/: Makefile  README.md
